--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<lang="en">
+<head>
+<title> My Resume </title>
+</head>
+<body>
+<h1> Lauren McQueen </h1>
+<h5> 9 Victoria Lane <br>
+Jacksonville, Ill. 62650 <br>
+217-883-2502 <br>
+lnmcqueen@eiu.edu </h5>
+<hr> </hr>
+<h2> Objective </h2>
+<p> To obtain a summer or part-time internship
+</p>
+<h2> Education </h2>
+<ul>
+<li> Eastern Illinois University, Charleston, Ill.
+</li>
+<li> Bachelor of Arts in journalism
+</li>
+<li>May 2017
+</li>
+<li>3.85 GPA
+</li> </ul>
 
+<h2> Experience </h2>
+<h4>
+Copy Editor/Designer, the Daily Eastern News </h4>
+<p>
+<ul> <li>Fall 2014 - Fall 2015 </li>
+<li>Copy edited and designed my college's daily 8-page newspaper </li>
+</ul></p>
+
+<h4> Copy Editor/Designer, The Warbler yearbook </h4>
+<p>
+<ul> <li>Fall 2015 - Spring 2016 </li>
+<li>Copy edited and designed my college's 240-page full-color yearbook </li>
+</ul>
+
+</p>
+
+
+<h2> Skills </h2>
+<ul>
+<li> AP Style</li>
+<li> Adobe Photoshop, InDesign, Bridge </li>
+<li> Github </li>
+</ul>
+
+<h2> References </h2>
+<p> Available upon request</p>
+</body>
+</html>
