--- a/resume.html
+++ b/resume.html
@@ -6,10 +6,13 @@
 </head>
 <body>
 <h1> Lauren McQueen </h1>
-<h5> 9 Victoria Lane <br>
-Jacksonville, Ill. 62650 <br>
-217-883-2502 <br>
-lnmcqueen@eiu.edu </h5>
+
+<div class="address"> <li> 9 Victoria Lane </li>
+<li> Jacksonville, Ill. 62650 </li>
+<li> 217-883-2502 </li>
+<li>lnmcqueen@eiu.edu </li>
+</div>
+
 <hr>
 <h2> Objective </h2>
 <p> To obtain a summer or part-time internship
@@ -47,6 +50,8 @@ Copy Editor/Designer, the Daily Eastern News </h4>
 <li> AP Style</li>
 <li> Adobe Photoshop, InDesign, Bridge </li>
 <li> Github </li>
+<li> Video editing</li>
+<li> Camera proficient</li>
 </ul>
 
 <h2> References </h2>
