--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Portfolio by lnmcqueen</title>
+    <link rel="stylesheet" href="stylesheet.css">
 
   </head>
   <body>
