--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
       <h1>Lauren McQueen</h1>
       <a href="resume.html">Resume</a>
+      <a href="projects.html"> Projects</a>
+      <a href= "contact.html"> Contact</a>
   </body>
 </html>
