--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="wrapper">
       <header>
         <h1>Lauren McQueen</h1>
+        header {text-align: center;}
+
 
       <a href="resume.html">Resume</a>
       <a href="projects.html"> Projects</a>
