--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 <body>
 <h1> Lauren McQueen </h1>
 
-<div class="address"> <li> 9 Victoria Lane </li>
+<div> <li> 9 Victoria Lane </li>
 <li> Jacksonville, Ill. 62650 </li>
 <li> 217-883-2502 </li>
 <li>lnmcqueen@eiu.edu </li>
