--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header>
         <h1>Lauren McQueen</h1>
-      
+      <p>An Online Portfolio</p>
 
 
       <a href="resume.html">Resume</a>
