--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <h1> Lauren McQueen </h1>
-<a href="resume.html">Resume</a>
-      <a href="projects.html"> Projects</a>
-      <a href= "contact.html"> Contact</a>
+
 <div> <li> 9 Victoria Lane </li>
 <li> Jacksonville, Ill. 62650 </li>
 <li> 217-883-2502 </li>
@@ -60,3 +58,7 @@ Copy Editor/Designer, the Daily Eastern News </h4>
 <p> Available upon request</p>
 </body>
 </html>
+
+      <a href="index.html">Home</a>
+      <a href="projects.html"> Projects</a>
+      <a href= "contact.html"> Contact</a>
