--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <h1> Lauren McQueen </h1>
-
+<a href="resume.html">Resume</a>
+      <a href="projects.html"> Projects</a>
+      <a href= "contact.html"> Contact</a>
+      <br>
 <div> <li> 9 Victoria Lane </li>
 <li> Jacksonville, Ill. 62650 </li>
 <li> 217-883-2502 </li>
