--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="wrapper">
       <header>
         <h1>Lauren McQueen</h1>
-      <p>An Online Portfolio</p>
-
+      <h2>An Online Portfolio</h2>
+      <p>Welcome to my online porfolio. Here you will find some of the projects I have worked on during my collegiate career as well as my resume and contact information.</p>
 
       <a href="resume.html">Resume</a>
       <a href="projects.html"> Projects</a>
