--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="resume.html">Resume</a>
       <a href="projects.html"> Projects</a>
       <a href= "contact.html"> Contact</a>
-      <h2 class"Online"> An Online Portfolio</h2>
+      <h2 class="Online"> An Online Portfolio</h2>
       <p>Welcome to my online porfolio. Here you will find some of the projects I have worked on during my collegiate career as well as my resume and contact information.</p>
 
   </body>
