--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,5 @@
 <link href= "stylesheet.css" rel="stylesheet">
  <h1>Lauren McQueen</h1>
- 
+ <a href="index.html">Home</a>
+      <a href="projects.html"> Projects</a>
+      <a href= "contact.html"> Contact</a>
