--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<link href= "stylesheet.css" rel="stylesheet">
- <h1>Lauren McQueen</h1>
+<link rel="stylesheet" href="stylesheet.css">
+<h1>Lauren McQueen</h1>
  <a href="index.html">Home</a>
       <a href="projects.html"> Projects</a>
       <a href= "contact.html"> Contact</a>
