--- a/contact.html
+++ b/contact.html
@@ -2,4 +2,4 @@
 <h1>Lauren McQueen</h1>
  <a href="index.html">Home</a>
       <a href="projects.html"> Projects</a>
-      <a href= "contact.html"> Contact</a>
+      <a href= "resume.html"> Resume</a>
