--- a/contact.html
+++ b/contact.html
@@ -3,3 +3,7 @@
  <a href="index.html">Home</a>
       <a href="projects.html"> Projects</a>
       <a href= "resume.html"> Resume</a>
+
+Phone:
+Email: lnmcqueen@eiu.edu
+Twitter: @lnmcqueen1
