--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,5 @@
 <link href= "stylesheet.css" rel="stylesheet">
+<h1>Lauren McQueen</h1>
+<a href="index.html">Home</a>
+      <a href="contact.html"> Contact</a>
+      <a href= "resume.html"> Resume</a>
