--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
  <a href="index.html">Home</a>
       <a href="projects.html"> Projects</a>
       <a href= "resume.html"> Resume</a>
-
-Phone:
+<body>
+<p>Phone:
 Email: lnmcqueen@eiu.edu
-Twitter: @lnmcqueen1
+Twitter: @lnmcqueen1 </p>
+</body>
