--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
       <a href= "resume.html"> Resume</a>
       <br>
 <body>
-<p>Phone:
+<p class="Contactme">Phone: 217-883-2502
 Email: lnmcqueen@eiu.edu
 Twitter: @lnmcqueen1 </p>
 </body>
