--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="links"href="resume.html">Resume</a>
       <a href="projects.html"> Projects</a>
       <a href= "contact.html"> Contact</a>
-      <p>Welcome to my online portfolio. Here you will find some of the projects I have worked on during my collegiate career as well as my resume and contact information.</p>
+      <p>Welcome to my online portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University. Here you will find some of the projects I have worked on during my collegiate career as well as my resume and contact information.</p>
 
   </body>
 </html>
