--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <h1>Lauren McQueen</h1>
          <h2 class="Online"> An Online Portfolio</h2>
-        <a class="links"href="resume.html">Resume</a>
+        <a href="resume.html">Resume</a>
       <a href="projects.html"> Projects</a>
       <a href= "contact.html"> Contact</a>
       <p>Welcome to my online portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University. Here you will find some of the projects I have worked on during my collegiate career as well as my resume and contact information.</p>
