--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
       <a href= "resume.html"> Resume</a>
       <br>
 <body>
-<p class="Contactme">Phone: 217-883-2502
-Email: lnmcqueen@eiu.edu
+<p class="Contactme">Phone: 217-883-2502 <br>
+Email: lnmcqueen@eiu.edu <br>
 Twitter: @lnmcqueen1 </p>
 </body>
