--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,7 @@
 <link href= "stylesheet.css" rel="stylesheet">
 <h1>Lauren McQueen</h1>
-<a href="index.html">Home</a>
+<body>
+      <a href="index.html">Home</a>
       <a href="contact.html"> Contact</a>
       <a href= "resume.html"> Resume</a>
+</body>
