--- a/projects.html
+++ b/projects.html
@@ -6,5 +6,5 @@
       <a href= "resume.html"> Resume</a>
       <hr>
       <br>
-      <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Link</a>
+      <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a>
 </body>
