--- a/projects.html
+++ b/projects.html
@@ -7,4 +7,7 @@
       <hr>
       <br>
       <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a>
+<a href="https://www.youtube.com/watch?v=in4buw4m73o"> Celebration, a Festival of the Arts</a>
+
+
 </body>
