--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
       <a href= "resume.html"> Resume</a>
       <hr>
       <br>
-      <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a>
+      <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a> <br>
 <a href="https://www.youtube.com/watch?v=in4buw4m73o"> Celebration, a Festival of the Arts</a>
 
 
