--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,11 @@
       <a href= "resume.html"> Resume</a>
       <hr>
       <br>
+      <h2>Videos</h2>
       <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a> <br>
-<a href="https://www.youtube.com/watch?v=in4buw4m73o"> Celebration, a Festival of the Arts</a>
+<a href="https://www.youtube.com/watch?v=in4buw4m73o"> Celebration, a Festival of the Arts</a> <br>
+<h2>Stories</h2>
+<h2>Photos</h2>
 
 
 </body>
