--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,10 @@
       <h2>Videos</h2>
       <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a> <br>
 <a href="https://www.youtube.com/watch?v=in4buw4m73o"> Celebration, a Festival of the Arts</a> <br>
+
 <h2>Stories</h2>
 <h2>Photos</h2>
 
-
+<a href="http://www.dailyeasternnews.com/staff/?writer=Lauren_McQueen">The Daily Eastern News Bio</a>
+a href="http://lnmcqueen.wix.com/laurenmcqueen">Celebration website </a>
 </body>
