--- a/projects.html
+++ b/projects.html
@@ -19,5 +19,5 @@
 <a href="http://lnmcqueen.wix.com/laurenmcqueen">Celebration website </a>
 
 <h2>Photos</h2>
-<a href="https://www.flickr.com/photos/136823722@N06/22733042136/in/dateposted-public/"</a>
+<a href="https://www.flickr.com/photos/136823722@N06/22733042136/in/dateposted-public/"></a>
 </body>
