--- a/projects.html
+++ b/projects.html
@@ -20,4 +20,13 @@
 
 <h2>Photos</h2>
 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22733042136/in/dateposted-public/" title="IMG_0867good"><img src="https://farm1.staticflickr.com/677/22733042136_45f7b7a14b_z.jpg" width="640" height="457" alt="IMG_0867good"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22571138160/in/dateposted-public/" title="IMG_0857"><img src="https://farm6.staticflickr.com/5639/22571138160_49d216ff44_z.jpg" width="640" height="359" alt="IMG_0857"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22770264781/in/dateposted-public/" title="IMG_0896"><img src="https://farm6.staticflickr.com/5808/22770264781_fb5eac202d_z.jpg" width="640" height="480" alt="IMG_0896"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<h2> Promotional Photos</h2>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22759065645/in/dateposted-public/" title="IMG_0583"><img src="https://farm1.staticflickr.com/747/22759065645_3946cb71b6_z.jpg" width="640" height="421" alt="IMG_0583"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22571155270/in/dateposted-public/" title="CR3"><img src="https://farm6.staticflickr.com/5678/22571155270_233a159f2a_z.jpg" width="640" height="499" alt="CR3"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22759050865/in/dateposted-public/" title="IMG_4915"><img src="https://farm6.staticflickr.com/5823/22759050865_8bcc5abb6a_z.jpg" width="640" height="519" alt="IMG_4915"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
 </body>
