--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,8 @@
       <br>
       <h2>Videos</h2>
       <a href="https://www.youtube.com/watch?v=P5WFs5OL2_g&feature=youtu.be">Coles County Habitat for Humanity ReStore</a> <br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/P5WFs5OL2_g" frameborder="0" allowfullscreen></iframe>
+
 <a href="https://www.youtube.com/watch?v=in4buw4m73o"> Celebration, a Festival of the Arts</a> <br>
 
 <h2>Stories</h2>
