--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,9 @@
       <hr>
       <br>
       <h2>Videos</h2>
-     Coles County Habitat for Humanity ReStore<br>
+     <h3>Coles County Habitat for Humanity ReStore</h3><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/P5WFs5OL2_g" frameborder="0" allowfullscreen></iframe><br>
-Celebration, a Festival of the Arts<br>
+<h3>Celebration, a Festival of the Arts</h3><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/in4buw4m73o" frameborder="0" allowfullscreen></iframe><br>
 
 <h2>Stories</h2>
