--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22571138160/in/dateposted-public/" title="IMG_0857"><img src="https://farm6.staticflickr.com/5639/22571138160_49d216ff44_z.jpg" width="640" height="359" alt="IMG_0857"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22770264781/in/dateposted-public/" title="IMG_0896"><img src="https://farm6.staticflickr.com/5808/22770264781_fb5eac202d_z.jpg" width="640" height="480" alt="IMG_0896"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
-<h2> Promotional Photos</h2><br>
+<h2> Promotional Photos</h2>
 <h3>Habitat for Humanity Color Run 5k</h3><br>
 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22759065645/in/dateposted-public/" title="IMG_0583"><img src="https://farm1.staticflickr.com/747/22759065645_3946cb71b6_z.jpg" width="640" height="421" alt="IMG_0583"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/136823722@N06/22571155270/in/dateposted-public/" title="CR3"><img src="https://farm6.staticflickr.com/5678/22571155270_233a159f2a_z.jpg" width="640" height="499" alt="CR3"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
