--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
       <br>
       <hr>
 <body>
+ <h2>Contact Me</h2>
 <p class="Contactme">Phone: 217-883-2502 <br>
 Email: lnmcqueen@eiu.edu <br>
 Twitter: @lnmcqueen1 </p>
