--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       <hr>
 <body>
  <h2>Contact Me</h2>
-<p class="Contactme">Phone: 217-883-2502 <br>
+<h3 class="Contactme">Phone: 217-883-2502 <br>
 Email: lnmcqueen@eiu.edu <br>
-Twitter: @lnmcqueen1 </p>
+Twitter: @lnmcqueen1 </h3>
 </body>
