--- a/contact.html
+++ b/contact.html
@@ -9,5 +9,5 @@
  <h2>Contact Me</h2>
 <h3 class="Contactme">Phone: 217-883-2502 <br>
 Email: lnmcqueen@eiu.edu <br>
-Twitter: <a href="https://twitter.com/lnmcqueen1>@lnmcqueen1</a> </h3>
+<a href="https://twitter.com/lnmcqueen1"> Twitter: @lnmcqueen1</a> </h3>
 </body>
