--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="projects.html"> Projects</a>
       <a href= "contact.html"> Contact</a>
       <hr>
-      <p class="Opening">Welcome to my online portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University. Here you will find some of the projects I have worked on during my collegiate career as well as my resume and contact information.</p>
+      <p class="Opening">Welcome to my portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University. Here you will find some of the projects I have worked on during my collegiate career, such as stories, photographs, videos and fliers, as well as my resume and contact information.</p>
 
   </body>
 </html>
