--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="projects.html"> Projects</a>
       <a href= "contact.html"> Contact</a>
       <hr>
-      <div id="Opening"><p>Welcome to my portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University.<br> Here you will find some of the projects I have worked on during my collegiate career, such as stories, photographs, videos and fliers, as well as my resume and contact information.</p>
+      <div class="Opening"><p>Welcome to my portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University.<br> Here you will find some of the projects I have worked on during my collegiate career, such as stories, photographs, videos and fliers, as well as my resume and contact information.</p>
 </div>
   </body>
 </html>
