--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       <header>
         <h1>Lauren McQueen</h1>
          <h2 class="Online"> An Online Portfolio</h2>
-        <a href="resume.html">Resume</a>
-      <a href="projects.html"> Projects</a>
-      <a href= "contact.html"> Contact</a>
+         </header>
+       <ul>
+          <li></li><a href="resume.html">Resume</a></li>
+      <li><a href="projects.html"> Projects</a></li>
+      <li><a href= "contact.html"> Contact</a></li>
+      </ul>
       <hr>
       <p class="Opening">Welcome to my portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University.<br> Here you will find some of the projects I have worked on during my collegiate career, such as stories, photographs, videos and fliers, as well as my resume and contact information.</p>
 </div>
