--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <h1>Lauren McQueen</h1>
          <h2 class="Online"> An Online Portfolio</h2>
          </header>
+       nav>
        <ul>
           <li></li><a href="resume.html">Resume</a></li>
       <li><a href="projects.html"> Projects</a></li>
       <li><a href= "contact.html"> Contact</a></li>
       </ul>
+      </nav>
       <hr>
       <p class="Opening">Welcome to my portfolio. My name is Lauren McQueen, and I am a junior journalism major at Eastern Illinois University.<br> Here you will find some of the projects I have worked on during my collegiate career, such as stories, photographs, videos and fliers, as well as my resume and contact information.</p>
 </div>
