--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Lauren McQueen</h1>
          <h2 class="Online"> An Online Portfolio</h2>
          </header>
-       nav>
+       <nav>
        <ul>
           <li></li><a href="resume.html">Resume</a></li>
       <li><a href="projects.html"> Projects</a></li>
