--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          </header>
        <nav>
        <ul>
-          <li></li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Resume</a></li>
       <li><a href="projects.html"> Projects</a></li>
       <li><a href= "contact.html"> Contact</a></li>
       </ul>
